Add new updates
